[gd_scene load_steps=6 format=3 uid="uid://c4jkgqn80v7ow"]

[ext_resource type="Script" path="res://Entities/character_template_for_fight.gd" id="1_44hqd"]
[ext_resource type="Texture2D" uid="uid://b45r0uea1ic5v" path="res://icon.svg" id="2_4hgut"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4qxr"]
bg_color = Color(0.87, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wi6su"]
bg_color = Color(0, 1, 0.0999999, 0.866667)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmji4"]
bg_color = Color(0, 0.316667, 1, 0.866667)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="EnemyTemplateForFight" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_44hqd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_right = 128.0
offset_bottom = 307.0
grow_horizontal = 2

[node name="StatContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/StatContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/StatContainer/VBoxContainer"]
layout_mode = 2

[node name="LVL" type="Label" parent="VBoxContainer/StatContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "LVL: "

[node name="DODGE" type="Label" parent="VBoxContainer/StatContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "DODGE: "

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/StatContainer/VBoxContainer"]
layout_mode = 2

[node name="ATK" type="Label" parent="VBoxContainer/StatContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "ATK: "

[node name="DEF" type="Label" parent="VBoxContainer/StatContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "DEF: "

[node name="SPEED" type="Label" parent="VBoxContainer/StatContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "SPEED: "

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_q4qxr")
theme_override_styles/fill = SubResource("StyleBoxFlat_wi6su")
step = 1.0
value = 100.0
allow_greater = true
show_percentage = false

[node name="HP" type="Label" parent="VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.5
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "HP: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="ManaStaminaBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_q4qxr")
theme_override_styles/fill = SubResource("StyleBoxFlat_cmji4")
step = 1.0
value = 100.0
allow_greater = true
show_percentage = false

[node name="MANA_STAMINA" type="Label" parent="VBoxContainer/ManaStaminaBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.5
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "MANA: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("2_4hgut")
